Make the pystache submodule actually work :)
Turns out at home I have pystache installed, so it alled seemed
fine, until I tried to run this server side :)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "pystache"]
-	path = pystache
+[submodule "python-mustache"]
+	path = python-mustache
 	url = https://github.com/defunkt/pystache.git
